bin/src/scripts/themeMenu.css
.css-theme_button {
    outline: none;
    position: absolute;
    top: 44px;
    right: 192px;
    padding: 4px 4px 8px;
    margin-top: 2px;
    min-width: 320px;
    border: 1px solid rgb(221, 226, 231);
    border-radius: 4px;
    background-color: rgb(255, 255, 255);
    z-index: 5000;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px 0px;
    user-select: none;
}

.css-menu-item:hover {
    background-color: rgb(239, 241, 243);
    cursor: pointer;
}

.css-theme_checkmark {
    align-items: center;
}

/* Remove padding in the application topbar for better theme button alignment */
.css-1t88lao.eu2udwo8 {
    padding-left: 0;
}

.button-theme {
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    --reach-checkbox: 1;
    --PhoneInput-color--focus: #03b2cb;
    --PhoneInputInternationalIconPhone-opacity: 0.8;
    --PhoneInputInternationalIconGlobe-opacity: 0.65;
    --PhoneInputCountrySelect-marginRight: 0.35em;
    --PhoneInputCountrySelectArrow-width: 0.3em;
    --PhoneInputCountrySelectArrow-marginLeft: var(--PhoneInputCountrySelect-marginRight);
    --PhoneInputCountrySelectArrow-borderWidth: 1px;
    --PhoneInputCountrySelectArrow-opacity: 0.45;
    --PhoneInputCountrySelectArrow-color: currentColor;
    --PhoneInputCountrySelectArrow-color--focus: var(--PhoneInput-color--focus);
    --PhoneInputCountrySelectArrow-transform: rotate(45deg);
    --PhoneInputCountryFlag-aspectRatio: 1.5;
    --PhoneInputCountryFlag-height: 1em;
    --PhoneInputCountryFlag-borderWidth: 1px;
    --PhoneInputCountryFlag-borderColor: #00000080;
    --PhoneInputCountryFlag-borderColor--focus: var(--PhoneInput-color--focus);
    --PhoneInputCountryFlag-backgroundColor--loading: #0000001a;
    --reach-listbox: 1;
    box-sizing: border-box;
    scrollbar-color: #e1e2e4 #0000;
    font: inherit;
    margin: 0;
    overflow: visible;
    text-transform: none;
    -webkit-appearance: button;
    font-family: inherit;
    line-height: inherit;
    outline: none;
    border: none;
    border-radius: 4px;
    display: flex;
    -webkit-box-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    align-items: center;
    color: rgb(54, 59, 62);
    background-color: transparent;
    cursor: pointer;
    font-size: 18px;
    width: 38px;
    height: 38px;
}

.button-theme:hover {
    background-color: rgb(239, 241, 243);
}

.button-theme-div {
    -webkit-text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0,0,0,0);
    --reach-checkbox: 1;
    --PhoneInput-color--focus: #03b2cb;
    --PhoneInputInternationalIconPhone-opacity: 0.8;
    --PhoneInputInternationalIconGlobe-opacity: 0.65;
    --PhoneInputCountrySelect-marginRight: 0.35em;
    --PhoneInputCountrySelectArrow-width: 0.3em;
    --PhoneInputCountrySelectArrow-marginLeft: var(--PhoneInputCountrySelect-marginRight);
    --PhoneInputCountrySelectArrow-borderWidth: 1px;
    --PhoneInputCountrySelectArrow-opacity: 0.45;
    --PhoneInputCountrySelectArrow-color: currentColor;
    --PhoneInputCountrySelectArrow-color--focus: var(--PhoneInput-color--focus);
    --PhoneInputCountrySelectArrow-transform: rotate(45deg);
    --PhoneInputCountryFlag-aspectRatio: 1.5;
    --PhoneInputCountryFlag-height: 1em;
    --PhoneInputCountryFlag-borderWidth: 1px;
    --PhoneInputCountryFlag-borderColor: #00000080;
    --PhoneInputCountryFlag-borderColor--focus: var(--PhoneInput-color--focus);
    --PhoneInputCountryFlag-backgroundColor--loading: #0000001a;
    --reach-listbox: 1;
    font-feature-settings: "cv05";
    line-height: 1.42857143;
    color: #616264;
    font-family: inherit;
    font-size: 13px;
    box-sizing: border-box;
    scrollbar-color: #e1e2e4 #0000;
}

.theme-menu-style {
    text-size-adjust: 100%;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    --reach-checkbox: 1;
    --PhoneInput-color--focus: #03b2cb;
    --PhoneInputInternationalIconPhone-opacity: 0.8;
    --PhoneInputInternationalIconGlobe-opacity: 0.65;
    --PhoneInputCountrySelect-marginRight: 0.35em;
    --PhoneInputCountrySelectArrow-width: 0.3em;
    --PhoneInputCountrySelectArrow-marginLeft: var(--PhoneInputCountrySelect-marginRight);
    --PhoneInputCountrySelectArrow-borderWidth: 1px;
    --PhoneInputCountrySelectArrow-opacity: 0.45;
    --PhoneInputCountrySelectArrow-color: currentColor;
    --PhoneInputCountrySelectArrow-color--focus: var(--PhoneInput-color--focus);
    --PhoneInputCountrySelectArrow-transform: rotate(45deg);
    --PhoneInputCountryFlag-aspectRatio: 1.5;
    --PhoneInputCountryFlag-height: 1em;
    --PhoneInputCountryFlag-borderWidth: 1px;
    --PhoneInputCountryFlag-borderColor: #00000080;
    --PhoneInputCountryFlag-borderColor--focus: var(--PhoneInput-color--focus);
    --PhoneInputCountryFlag-backgroundColor--loading: #0000001a;
    --reach-listbox: 1;
    font-feature-settings: "cv05";
    line-height: 1.42857;
    color: rgb(97, 98, 100);
    font-family: inherit;
    font-size: 13px;
    box-sizing: border-box;
    scrollbar-color: #e1e2e4 #0000;
    position: absolute;
    top: 38px;
    right: 0px;
    margin-top: 2px;
    min-width: 320px;
    background-color: rgb(255, 255, 255);
    z-index: 5000;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 2px 8px 0px;
    user-select: none;
    outline: none;
    padding: 4px 4px 8px;
    border: 1px solid rgb(221, 226, 231);
    border-image: initial;
    border-radius: 4px;
    display: block;
}

